--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
-    "react-leaflet": "^3.1.0",
+    "react-leaflet": "^3.2.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
@@ -30,16 +30,9 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ]
 }
